# vela-did-tool

./: .cursorrules  .env-example  .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  sign_credential.py  test_didkit_wasm.py  test_mock_didkit.py  test_parameter_handling.py
.github/workflows/: build-wasm.yml  production-build.yml
scripts/: __init__.py  build_didkit_c_api.sh  build_for_production.py  run_tool.sh  test_production_mode.py  verify_wasm_hash.sh
src/: __init__.py  config.py  did_utils.py  errors.py  exceptions.py  main.py  mock_didkit.py  production_guard.py  validators.py  wasm_wrapper.py
src/wasm/: README.md  mock_didkit.py
test_data/: test_credential.json
tests/: README.md  __init__.py  conftest.py  test_context_loader.py  test_did.py  test_did_utils.py  test_didkit_integration.py  test_run.py  test_vc_utils.py
vela_did_tool/: __init__.py  constants.py  context_loader.py  did_utils.py  errors.py  run.py  schemas.py  vc_utils.py
vela_did_tool/configs/: deployment.json
