[tool.poetry]
name = "vela-did-tool"
version = "0.1.0"
description = "Vela DID Tool for creating, signing, and verifying Verifiable Credentials using didkit"
authors = ["Vela Network <info@vela.network>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
didkit = "^0.6.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
